[package]
name = "falcon-z3"
version = "0.3.2"
authors = ["Alex Eubanks <endeavor@rainbowsandpwnies.com>"]
homepage = "https://github.com/falconre/falcon-z3"
repository = "https://github.com/falconre/falcon-z3"
description = "Rust bindings for z3 and Falcon"
readme = "README.md"
license = "MIT"
build = "build.rs"

[dependencies]
error-chain = "0.12"
#falcon = "0.3.2"
falcon = { git="http://github.com/falconre/falcon" }
num-bigint = { version="0.2", features = ["serde"]}
num-traits = "0.2.1"

[lib]
name = "falcon_z3"
path = "lib/lib.rs"

[build-dependencies]
bindgen = "0.35.0"