[package]
name = "falcon-z3"
version = "0.5.1"
authors = ["Alex Eubanks <endeavor@rainbowsandpwnies.com>"]
homepage = "https://github.com/falconre/falcon-z3"
repository = "https://github.com/falconre/falcon-z3"
description = "Rust bindings for z3 and Falcon"
readme = "README.md"
license = "MIT"

[dependencies]
error-chain = "0.12"
falcon = "0.5.1"
num-bigint = { version="0.4", features = ["serde"]}
num-traits = "0.2"
z3-sys = "0.6"

[features]
capstone4 = ["falcon/capstone4"]

[lib]
name = "falcon_z3"
path = "lib/lib.rs"
